change in style

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
     <h1>Persentage Calcualor</h1>
     <form id="myform">
-        Enter First Number <input type="text" id="number1">
-        <br><br> Enter the total <input type="text" id="number2">?
+        Enter First Number <input type="text" id="number1"> Enter the total <input type="text" id="number2">?
         <br><br>
         <input type="submit">
 
 
     </form>
+
     <h3 id="result"></h3>
+    <div>this page calculate the %</div>
     <script src="calc.js"></script>
     <!-- <script src="scripts.js"></script> -->
 </body>
